[package]
name = "last-commit"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "last-commit"
path = "src/server.rs"

[dependencies]
tiny_http = "0.12"
ureq = { version = "3", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
